# minigun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  README  benchmark_utils.h  download_graph.py  main.cu  special_graph.h
benchmark/alledge/: CMakeLists.txt  main.cu
benchmark/custom_kernel/: ;  graph_ops.cuh
benchmark/data/: citeseer.txt  cora.txt  pubmed.txt
benchmark/gather_scatter/: main.cu
benchmark/ground_truth/: graph_ops.h
benchmark/minigun/: graph_ops.cuh
benchmark/test_graph/: CMakeLists.txt  main.cu
cmake/: config.cmake
cmake/modules/: CUDA.cmake
cmake/util/: Util.cmake
docker/: Dockerfile.cpu  Dockerfile.gpu  build_docker.sh
docker/install/: ubuntu_install_core.sh
minigun/minigun/: advance.h  base.h  csr.h  mem.h  minigun.h  spmat.h
minigun/minigun/cpu/: advance.h  advance_all.h  advance_new.h
minigun/minigun/cuda/: advance.cuh  advance_all.cuh  advance_lb.cuh  cuda_common.cuh  cuda_common.h  tuning.h
samples/: CMakeLists.txt  samples_io.h  samples_utils.h
samples/benchmark/: CMakeLists.txt  bench_backward_edge_softmax.cu  bench_edge_softmax.cu  bench_masked_mm.cu  bench_spmm.cu  main.cu
samples/benchmark/baseline/: yzh_kernels.cuh
samples/benchmark/minigun/: esoftmax.cuh  esoftmax_back.cuh  masked_mm.cuh  spmm.cuh
samples/edge_softmax/: CMakeLists.txt  main.cc  main.cu
samples/masked_mm/: CMakeLists.txt  main.cc  main.cu
samples/pr/: CMakeLists.txt  main.cu
samples/spmm/: CMakeLists.txt  full.cc  full.cu  main.cc  main.cu
samples/spmm_atomic/: CMakeLists.txt  full.cc  full.cu
samples/spmv/: CMakeLists.txt  full.cc  full.cu  main.cc  main.cu  partial.cc  partial.cu
samples/traverse/: CMakeLists.txt  succ.cu
scripts/: gen_benchmark_graphs.sh  gen_dgl_graph.py  gen_rand_graph.py  graph_io.py  run_benchmarks.sh  segtree.py
