project(benchmark)
message("-- Project added: ${PROJECT_NAME}")

if(USE_CUDA)
    CUDA_ADD_EXECUTABLE(bench_masked_mm bench_masked_mm.cu)
    target_link_libraries(bench_masked_mm ${MINIGUN_LINKER_LIBS} dmlc)
    CUDA_ADD_EXECUTABLE(bench_edge_softmax bench_edge_softmax.cu)
    target_link_libraries(bench_edge_softmax ${MINIGUN_LINKER_LIBS} dmlc)
    #CUDA_ADD_EXECUTABLE(bench_backward_edge_softmax bench_backward_edge_softmax.cu)
    #target_link_libraries(bench_backward_edge_softmax ${MINIGUN_LINKER_LIBS} dmlc)
    CUDA_ADD_EXECUTABLE(bench_spmm bench_spmm.cu)
    target_link_libraries(bench_spmm ${MINIGUN_LINKER_LIBS} dmlc ${CUDA_cusparse_LIBRARY} ${CUDA_CUBLAS_LIBRARIES})
endif()
